--- a/index.html
+++ b/index.html
@@ -127,34 +127,49 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
 </div>
 <div class="carousel-inner">
     <div class="carousel-item active">
     <img src="images/gal5.jpg" class="d-block w-100 img_sl" alt="...">
     <div class="carousel-caption d-none d-md-block">
-        <p> <h2> Samsung Galaxy A17 5G </h3></p>
-        <h4>From ₹19700</h4>
+        <h1 class="b_color"> Samsung Galaxy A17 5G </h1>
+        <h4 class="b_color">From ₹19,700</h4>
+        <p class="b_color">Samsung Galaxy A17 6.7" 1080x2340 pixels 50MP</p>
+        <p class="b_color"> 4-8GB RAM Exynos 1330  5000mAh 25W</p>
+        <p class="b_color">1080p 2025 7.5mm thickness</p>
     </div>
     </div>
     <div class="carousel-item">
         <img src="images/bed-1839183_1280.jpg" class="d-block w-100 img_sl" alt="...">
         <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h1 class="c_color">Beds</h1>
+        <h4 class="c_color">From ₹8,999</h4>
+        <p class="c_color">Wooden street, Sleepyhead & more</p>
     </div>
     </div>
     <div class="carousel-item">
         <img src="images/furn.jpg" class="d-block w-100 img_sl" alt="...">
         <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h1 class="d_color">Mattress</h1>
+        <h4 class="d_color">from ₹2,999</h4>
+        <p class="d_color">Wakefit,Slepwell & more</p>
     </div>
     </div>
     <div class="carousel-item">
         <img src="images/ch3.jpg" class="d-block w-100 img_sl" alt="...">
     <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h1 class="e_color">Gaming chair</h1>
+        <h4 class="e_color">From ₹1,800</h4>
+        <p class="e_color">All types of gaming chairs</p>
+    </div>
+    </div>
+    <div class="carousel-item">
+        <img src="images/airbus-4454338_1280.jpg" class="d-block w-100 img_size" alt="...">
+    <div class="carousel-caption d-none d-md-block">
+        <h1 class="e_color">Save on international upto ₹20,000 off</h1>
+        <h4 class="e_color">Book Now</h4>
+        
     </div>
     </div>
     </div>
@@ -165,7 +180,7 @@
 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
-  </button>
+</button>
 </div>
         </section>
     <!-- slider section end -->
